Fix alignments on My Dashboard

--- a/src/ggrc/assets/stylesheets/_header.scss
+++ b/src/ggrc/assets/stylesheets/_header.scss
@@ -92,7 +92,7 @@
       float:left;
       color: $black;
       line-height: 47px;
-      font-size: 14px;
+      font-size: 12px;
       .count {
         @include border-radius(8px);
         font-size: 12px;
@@ -109,7 +109,7 @@
         line-height: 47px;
         padding: 0 10px;
         i {
-          margin: 16px 2px 0 0;
+          margin: 15px 2px 0 0;
           &.grcicon-carot-white {
             margin-right: 0;
           }
