--- a/src/ggrc/assets/stylesheets/_widget.scss
+++ b/src/ggrc/assets/stylesheets/_widget.scss
@@ -229,6 +229,9 @@
       padding-left: 0;
       padding-right: 0;
     }
+    .header {
+      margin: 6px 0 4px;
+    }
   }
   &.workflow-info-widget {
     overflow-y: visible;
